--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,9 +49,9 @@ jobs:
         uses: codecov/codecov-action@v3
         env:
             CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      - uses: julia-actions/julia-uploadcoveralls@v1
-        env:
-          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v2.2.3
+            
   docs:
     name: Documentation
     runs-on: ubuntu-latest
