--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "755902ed-ac2d-43b6-a89a-c3d45b7be12e"
 authors = ["Mohammed Alshahrani <mmogib@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+RowEchelon = "af85af4c-bcd5-5d23-b03a-a909639aa875"
+
 [compat]
+RowEchelon = "0.2"
 julia = "1.9"
 
 [extras]
